--- a/app/src/main/res/xml/fileprovider.xml
+++ b/app/src/main/res/xml/fileprovider.xml
@@ -4,9 +4,9 @@
         <!-- See table below.  The external-files-path DOES NOT require external storage permissions. -->
         <external-files-path
             name="images"
-            path="Picture" />
+            path="Movies" />
 
         <!--Uncomment below to share the entire application specific directory -->
-        <external-path name="all_dirs" path="."/>
+<!--        <external-path name="all_dirs" path="."/>-->
     </paths>
 </PreferenceScreen>
