--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="8dp">
@@ -34,14 +37,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="36dp"
             card_view:srcCompat="@drawable/ufi_comment" />
-
-        <MediaController
-            android:id="@+id/mediaController"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" >
-        </MediaController>
-
         <VideoView
             android:id="@+id/vvPostVideo"
             android:layout_width="200dp"
@@ -57,7 +52,6 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:textSize="20sp"
-            android:textStyle="bold"
             tools:text="Category" />
 
         <TextView
@@ -68,7 +62,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:text="TextView"
-            android:textStyle="bold" />
+            tools:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvCaption"
