--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -78,9 +78,9 @@
             android:id="@+id/tvNumVotesFirst"
             android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="345dp"
+            android:layout_marginLeft="350dp"
             android:layout_marginTop="12dp"
-            android:text="100" />
+            android:text="0" />
 
     </androidx.cardview.widget.CardView>
 
@@ -95,12 +95,12 @@
         android:layout_marginEnd="20dp">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tvNumVotesSecond"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="330dp"
             android:layout_marginTop="12dp"
-            android:text="50" />
+            android:text="0" />
 
         <TextView
             android:id="@+id/tvUsernameSecond"
@@ -108,7 +108,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="12dp"
-            android:text="TextView" />
+            android:text="This could be you..."
+            android:textSize="12sp"
+            android:textStyle="italic" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -138,12 +140,12 @@
         android:layout_marginEnd="30dp">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvNumVotesThird"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="310dp"
             android:layout_marginTop="12dp"
-            android:text="10" />
+            android:text="0" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -159,7 +161,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="12dp"
-            android:text="TextView" />
+            android:text="This could be you..."
+            android:textSize="12sp"
+            android:textStyle="italic" />
 
         <ImageView
             android:id="@+id/imageView3"
